--- a/SBA3.css
+++ b/SBA3.css
@@ -21,7 +21,7 @@
  margin-top: 15px;
 }
 button{
-    font-size: 26px;
+    font-size: 22px;
     border-radius: 10px;
     padding: 5px;
     border: 0;
@@ -31,4 +31,21 @@ button{
 }
 button:hover{
     background-color: rgb(122, 83, 83);
+}
+.login-in{
+    border: solid 1px chocolate;
+    max-width: 400px;
+    padding: 25px;
+     margin: 0;
+     border-radius: 10px;
+     margin-top: 130px;
+     margin-left: 450px;
+     display: flex;
+     flex-direction: column;
+     align-content: center;
+}
+h2{
+    display: flex;
+    justify-content: center;
+
 }
