--- a/SBA3.css
+++ b/SBA3.css
@@ -32,7 +32,7 @@ button{
 button:hover{
     background-color: rgb(122, 83, 83);
 }
-.login-in{
+.form{
     border: solid 1px chocolate;
     max-width: 400px;
     padding: 25px;
